--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li class="farmers-markets">Upcountry Farmers Market - 55 Kiopaa Street, Pukalani. Saturdays, 7-11 AM.<span class="city pukalani"></span></li>
                     <li class="farmers-markets">Waipuna Farmers Market - At the intersection of Kula Hwy and Omaopio Road on the grounds of Waipuna Chapel. Wednesdays, 8–1 PM. <span class="city kula"></span></li>
                     <li class="farms">Kula Country Farms <span class="city kula"></span></li>
-                    <li class="farms">O’o Farms <span class="city kula"></span></li>
+                    <li class="farms"><a href="http://oofarm.mybigcommerce.com/" target="_blank">O’o Farms</a> <span class="city kula"></span></li>
                     <li class="activities"><a href="https://www.aliikulalavender.com" target="_blank">Ali’i Lavender Farm</a> <span class="city kula"></span></li>
                     <li class="activities">Kula Botanical Gardens <span class="city kula"></span></li>
                     <li class="arts"><a href="https://www.huinoeau.com/" target="_blank">Hui No‘eau Visual Arts Center</a> <span class="city makawao"></span></li>
@@ -41,15 +41,15 @@
                     <li class="arts">Keokea Gallery <span class="city keokea"></span></li>
                     <li class="activities">Surfing Goat Nursery <span class="city kula"></span></li>
                     <li class="activities"><a href="" target="_blank">Thompson Riding Stables</a> <span class="city kula"></span></li>
-                    <li class="activities">Coffee Tour <span class="city kula"></span></li>
-                    <li class="activities">Pineapple Tour <span class="city makawao"></span></li>
+                    <li class="activities"><a href="http://www.shimfarmtour.com/" target="_blank">Shims Coffee Farm</a> <span class="city kula"></span></li>
+                    <li class="activities"><a href="https://mauipineappletour.com" target="_blank">Pineapple Tour</a> <span class="city makawao"></span></li>
                     <li class="walking">Thompson Road <span class="city keokea"></span></li>
                     <li class="activities">Thompson Riding Stables <span class="city kula"></span></li>
                     <li class="activities">Mangala Yoga Studio <span class="city makawao"></span></li>
                     <li class="activities">Wisdom Yoga <span class="city pukalani"></span></li>
-                    <li class="museums">Makawao History Museum <span class="city makawao"></span></li>
-                    <li class="museums">Bailey House Museum <span class="city wailuku"></span></li>
-                    <li class="museums">Baldwin Home Museum <span class="city lahaina"></span></li>
+                    <li class="museums"><a href="https://makawaomuseum.org/" target="_blank">Makawao History Museum</a> <span class="city makawao"></span></li>
+                    <li class="museums"><a href="https://www.mauimuseum.org/" target="_blank">Bailey House Museum</a> <span class="city wailuku"></span></li>
+                    <li class="museums"><a href="http://lahainarestoration.org/baldwin-home-museum/" target="_blank">Baldwin Home Museum</a> <span class="city lahaina"></span></li>
                     <li class="grocery-stores">Morihara Store <span class="city kula"></span></li>
                     <li class="grocery-stores">Pukalani Superette <span class="city pukalani"></span></li>
                     <li class="grocery-stores">Foodland <span class="city pukalani"></span><span class="city kihei"></span><span class="city lahaina"></span></li>
@@ -59,6 +59,7 @@
                     <li class="restaurants">Kula Bistro <span class="city pukalani"></span><span class="city kihei"></span></li>
                     <li class="restaurants">Habibi on Maui <span class="city makawao"></span></li>
                     <li class="restaurants">Nuka <span class="city haiku"></span></li>
+                    <li class="restaurants">Waikapu On 30 <span class="city wailuku"></span></li>
                 </ul>
             </section>
 
