--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
                     <li class="farms">Kula Country Farms <span class="city kula"></span></li>
                     <li class="farms"><a href="http://oofarm.mybigcommerce.com/" target="_blank">O’o Farms</a> <span class="city kula"></span></li>
                     <li class="activities"><a href="https://www.aliikulalavender.com" target="_blank">Ali’i Lavender Farm</a> <span class="city kula"></span></li>
-                    <li class="activities">Kula Botanical Gardens <span class="city kula"></span></li>
+                    <li class="activities"><a href="http://www.kulabotanicalgarden.com" target="_blank">Kula Botanical Gardens</a> <span class="city kula"></span></li>
                     <li class="arts"><a href="https://www.huinoeau.com/" target="_blank">Hui No‘eau Visual Arts Center</a> <span class="city makawao"></span></li>
                     <li class="arts"><a href="https://costgallery.com/" target="_blank">Curtis Wilson Cost Gallery</a> <span class="city kula"></span></li>
                     <li class="arts">Keokea Gallery <span class="city keokea"></span></li>
-                    <li class="activities">Surfing Goat Nursery <span class="city kula"></span></li>
-                    <li class="activities"><a href="" target="_blank">Thompson Riding Stables</a> <span class="city kula"></span></li>
+                    <li class="activities"><a href="https://www.surfinggoatdairy.com/" target="_blank">Surfing Goat Nursery</a> <span class="city kula"></span></li>
+                    <li class="activities"><a href="" target="_blank"><a href="http://thompsonranchmaui.com/" target="_blank">Thompson Riding Stables</a></a> <span class="city kula"></span></li>
                     <li class="activities"><a href="http://www.shimfarmtour.com/" target="_blank">Shims Coffee Farm</a> <span class="city kula"></span></li>
                     <li class="activities"><a href="https://mauipineappletour.com" target="_blank">Pineapple Tour</a> <span class="city makawao"></span></li>
                     <li class="walking">Thompson Road <span class="city keokea"></span></li>
                     <li class="activities">Thompson Riding Stables <span class="city kula"></span></li>
                     <li class="activities">Mangala Yoga Studio <span class="city makawao"></span></li>
-                    <li class="activities">Wisdom Yoga <span class="city pukalani"></span></li>
+                    <li class="activities"><a href="http://www.wisdomflowyoga.com/" target="_blank">Wisdom Yoga</a> <span class="city pukalani"></span></li>
                     <li class="museums"><a href="https://makawaomuseum.org/" target="_blank">Makawao History Museum</a> <span class="city makawao"></span></li>
                     <li class="museums"><a href="https://www.mauimuseum.org/" target="_blank">Bailey House Museum</a> <span class="city wailuku"></span></li>
                     <li class="museums"><a href="http://lahainarestoration.org/baldwin-home-museum/" target="_blank">Baldwin Home Museum</a> <span class="city lahaina"></span></li>
