--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <br />
 
             <section id="footer">
-                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=elliottcost@gmail.com&su=Maui website&body=Hey, here's a list of things to do on Maui: https://haleakala.today" target="_blank">Email this page to a friend</a>. ✉
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=elliottcost@gmail.com&su=Haleakala Today&body=Hey, here's a list of things to do on Maui: https://haleakala.today" target="_blank">Email this page to a friend</a>. ✉
                 
                 <!-- <br /><br /><i>This page is brought to you by <a href="" target="_blank">The Curtis Wilson Cost Gallery</i></a>. -->
             </section>
