--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       
     <body class="crater-body">
    
-            <header>❀ Today is <span id="today"></span>. It is <span id="current-weather"></span> in Upcountry Maui. <span id="forecast-name"></span> will be <span id="forecast-weather"></span>.</header>
+            <header><span id="flower"></span> Today is <span id="today"></span>. It is <span id="current-weather"></span> in Upcountry Maui. <span id="forecast-name"></span> will be <span id="forecast-weather"></span>.</header>
 
             <nav><a id="activities">Activities</a> <a id="farmers-markets">Farmers Markets</a> <a id="farms">Farms</a> <a id="arts">Art</a> <a id="museums">Museums</a> <a id="grocery-stores">Grocery stores</a> <a id="restaurants">Restaurants</a> <a id="walking">Walking</a></nav>
 
