--- a/index.html
+++ b/index.html
@@ -26,40 +26,11 @@
    
             <header><span id="flower"></span> Today is <span id="today"></span>. It is <span id="current-weather"></span> in Upcountry Maui. <span id="forecast-name"></span> will be <span id="forecast-weather"></span>.</header>
 
-            <nav><a id="activities">Activities</a> <a id="farmers-markets">Farmers Markets</a> <a id="farms">Farms</a> <a id="arts">Art</a> <a id="museums">Museums</a> <a id="grocery-stores">Grocery stores</a> <a id="restaurants">Restaurants</a> <a id="walking">Walking</a></nav>
+            <nav><a id="activities">Activities</a> <a id="beaches">Beaches</a> <a id="hiking">Hiking</a> <a id="farmers-markets">Farmers Markets</a> <a id="farms">Farms</a> <a id="arts">Art</a> <a id="museums">Museums</a> <a id="grocery-stores">Grocery stores</a> <a id="restaurants">Restaurants</a></nav>
 
             <section id="list">
-                <ul>
-                    <li class="farmers-markets">Upcountry Farmers Market - 55 Kiopaa Street, Pukalani. Saturdays, 7-11 AM.<span class="city pukalani"></span></li>
-                    <li class="farmers-markets">Waipuna Farmers Market - At the intersection of Kula Hwy and Omaopio Road on the grounds of Waipuna Chapel. Wednesdays, 8–1 PM. <span class="city kula"></span></li>
-                    <li class="farms">Kula Country Farms <span class="city kula"></span></li>
-                    <li class="farms"><a href="http://oofarm.mybigcommerce.com/" target="_blank">O’o Farms</a> <span class="city kula"></span></li>
-                    <li class="activities"><a href="https://www.aliikulalavender.com" target="_blank">Ali’i Lavender Farm</a> <span class="city kula"></span></li>
-                    <li class="activities"><a href="http://www.kulabotanicalgarden.com" target="_blank">Kula Botanical Gardens</a> <span class="city kula"></span></li>
-                    <li class="arts"><a href="https://www.huinoeau.com/" target="_blank">Hui No‘eau Visual Arts Center</a> <span class="city makawao"></span></li>
-                    <li class="arts"><a href="https://costgallery.com/" target="_blank">Curtis Wilson Cost Gallery</a> <span class="city kula"></span></li>
-                    <li class="arts">Keokea Gallery <span class="city keokea"></span></li>
-                    <li class="activities"><a href="https://www.surfinggoatdairy.com/" target="_blank">Surfing Goat Nursery</a> <span class="city kula"></span></li>
-                    <li class="activities"><a href="" target="_blank"><a href="http://thompsonranchmaui.com/" target="_blank">Thompson Riding Stables</a></a> <span class="city kula"></span></li>
-                    <li class="activities"><a href="http://www.shimfarmtour.com/" target="_blank">Shims Coffee Farm</a> <span class="city kula"></span></li>
-                    <li class="activities"><a href="https://mauipineappletour.com" target="_blank">Pineapple Tour</a> <span class="city makawao"></span></li>
-                    <li class="walking">Thompson Road <span class="city keokea"></span></li>
-                    <li class="activities">Thompson Riding Stables <span class="city kula"></span></li>
-                    <li class="activities">Mangala Yoga Studio <span class="city makawao"></span></li>
-                    <li class="activities"><a href="http://www.wisdomflowyoga.com/" target="_blank">Wisdom Yoga</a> <span class="city pukalani"></span></li>
-                    <li class="museums"><a href="https://makawaomuseum.org/" target="_blank">Makawao History Museum</a> <span class="city makawao"></span></li>
-                    <li class="museums"><a href="https://www.mauimuseum.org/" target="_blank">Bailey House Museum</a> <span class="city wailuku"></span></li>
-                    <li class="museums"><a href="http://lahainarestoration.org/baldwin-home-museum/" target="_blank">Baldwin Home Museum</a> <span class="city lahaina"></span></li>
-                    <li class="grocery-stores">Morihara Store <span class="city kula"></span></li>
-                    <li class="grocery-stores">Pukalani Superette <span class="city pukalani"></span></li>
-                    <li class="grocery-stores">Foodland <span class="city pukalani"></span><span class="city kihei"></span><span class="city lahaina"></span></li>
-                    <li class="grocery-stores">Mana Foods <span class="city paia"></span></li>
-                    <li class="restaurants">Grandma’s Coffee House <span class="city keokea"></span></li>
-                    <li class="restaurants">La Provence <span class="city kula"></span></li>
-                    <li class="restaurants">Kula Bistro <span class="city pukalani"></span><span class="city kihei"></span></li>
-                    <li class="restaurants">Habibi on Maui <span class="city makawao"></span></li>
-                    <li class="restaurants">Nuka <span class="city haiku"></span></li>
-                    <li class="restaurants">Waikapu On 30 <span class="city wailuku"></span></li>
+                <ul id="list-items">
+
                 </ul>
             </section>
 
@@ -67,8 +38,11 @@
                 <h2><b>Cities</b></h2>
 
                 <ul>
+                    <!-- <li>Haleakala Crater <span class="city haleakala-crater"></span></li> -->
                     <li>Kula <span class="city kula"></span></li>
                     <li>Keokea <span class="city keokea"></span></li>
+                    <li>Ulupalakua <span class="city ulupalakua"></span></li>
+                    <li>Hana <span class="city hana"></span></li>
                     <li>Makawao <span class="city makawao"></span></li>
                     <li>Haiku <span class="city haiku"></span></li>
                     <li>Paia <span class="city paia"></span></li>
@@ -76,7 +50,10 @@
                     <li>Kahului <span class="city kahului"></span></li>
                     <li>Wailuku <span class="city wailuku"></span></li>
                     <li>Kihei <span class="city kihei"></span></li>
+                    <li>Wailea <span class="city wailea"></span></li>
                     <li>Lahaina <span class="city lahaina"></span></li>
+                    <li>Napili <span class="city napili"></span></li>
+                    <li>Kaanapali <span class="city kaanapali"></span></li>
                 </ul>
             </section>
 
