grocery stores caps

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    
             <header><span id="flower"></span> Today is <span id="today"></span>. It is <span id="current-weather"></span> in Upcountry Maui. <span id="forecast-name"></span> will be <span id="forecast-weather"></span>.</header>
 
-            <nav><a id="activities">Activities</a> <a id="beaches">Beaches</a> <a id="hiking">Hiking</a> <a id="farmers-markets">Farmers Markets</a> <a id="farms">Farms</a> <a id="arts">Art</a> <a id="museums">Museums</a> <a id="grocery-stores">Grocery stores</a> <a id="restaurants">Restaurants</a></nav>
+            <nav><a id="activities">Activities</a> <a id="beaches">Beaches</a> <a id="hiking">Hiking</a> <a id="farmers-markets">Farmers Markets</a> <a id="farms">Farms</a> <a id="arts">Art</a> <a id="museums">Museums</a> <a id="grocery-stores">Grocery Stores</a> <a id="restaurants">Restaurants</a></nav>
 
             <section id="list">
                 <ul id="list-items">
