--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
       <meta property="og:url" content="https://haleakala.today"/>
       <script src="js/jquery.js"></script>
       <script src="js/haleakala.js"></script>
+
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-81186367-5"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-81186367-5');
+      </script>
+
     </head>
       
     <body class="crater-body">
