--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Haleakala Today</title>
       <meta name="description" content="A curated list of things to do on Maui.">
       <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-      <link href="css/haleakala.css" rel="stylesheet">
+      <link href="css/haleakala.css?1" rel="stylesheet">
       <link rel="shortcut icon" type="image/png" href="https://www.nps.gov/webcams-hale/HaleSummitCamCrater.jpg">
       <meta name="twitter:card" content="summary_large_image">
       <meta name="twitter:site" content="@oilstel">
